# anemos-public-api-old

./: .dockerignore  .gitignore  README.md  docker-compose-dev.yml  docker-compose-devct.yml  publicapi-redis.md  start-container-prod.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
kubernetes/: deployment.yml
public-api/: Cargo.toml
public-api-collector/: Cargo.toml
public-api-collector/src/: earthquake.rs  get_env.rs  main.rs  redis.rs
public-api-collector/src/earthquake/: collect_earthquake.rs  scheme.rs
public-api-lib/: Cargo.toml
public-api-lib/src/: earthquake_operator.rs  get_env.rs  lib.rs  redis.rs  scheme.rs
public-api-lib/src/scheme/: earthquake.rs  weather_warning.rs
public-api/src/: api.rs  main.rs
public-api/src/api/: earthquake.rs  openapi.rs  public_transportation.rs  route.rs  versions.rs  wether_warning.rs
public-api/src/api/utils/: version.rs
pubtrans/ekidata/: analys.py  comp.json  comp.py  dictionary.json  railway.json
pubtrans/ekidata/src/: company.csv
pubtrans/master/: dataOperator.py  init_com.py  init_railway.py  maintenance.py
pubtrans/master/input/: join.csv  line.csv
pubtrans/master/output/: init_companies.json  init_railways.json
pubtrans/odpt/: apiTest.py  getRailways.py  result.json
pubtrans/odpt/sample/: apiInfo.json  jr-railways.json  jr-station.json  railways.json  traininfo.json  trains.json
