[package]
name = "public-api-collector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
anyhow = "1.0.82"
once_cell = "1.19.0"
redis = { version = "0.25.3", features = ["tokio-comp"] }
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }
chrono-tz = "0.9.0"
public-api-lib = {path = "../public-api-lib"}
reqwest = "0.12.4"
futures = "0.3.30"

