[package]
name = "public-api-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.11.3"
log = "0.4.21"
anyhow = "1.0.82"
redis = { version = "0.25.3", features = ["tokio-comp"] }
once_cell = "1.19.0"
serde = { version = "1.0.199", features = ["derive"] }
serde_json = "1.0.116"