[package]
name = "public-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.5.1"
anyhow = "1.0.82"
env_logger = "0.11.3"
log = "0.4.21"
serde = "1.0.198"
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
utoipa = { version = "4.2.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "6.0.0", feature = ["actix_web", "SwaggerUi"], features = ["actix-web"] }
public-api-lib = {path = "../public-api-lib"}
reqwest = "0.12.4"
once_cell = "1.19.0"